[package]
name = "transaction-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
# http
warp = "0.3"
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# bytes
bytes = "1.2.1"

# ethereum, evm
revm = { version = "3", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee"
] }
ethers = { git = "https://github.com/gakonst/ethers-rs" }
foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "12ea9f6" }
foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "12ea9f6" }

# env, logs, errors
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.4"
eyre = "0.6"

[dev-dependencies]
temp-env = { version = "0.3.4", features = ["async_closure"] }

